force-app/main/default/objects/GitHub_Details__c/GitHub_Details__c.object-meta.xml
<CustomObject>
    <label>GitHub Details</label>
    <nameField>
        <label>GutHub Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GitHub Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>