force-app/main/default/objects/GitHub_Details__c/fields/PR_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Number__c</fullName>
    <externalId>true</externalId>
    <label>PR Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>