force-app/main/default/objects/GitHub_Details__c/fields/PR_URL__c.field-meta.xml
<CustomField>
    <fullName>PR_URL__c</fullName>
    <label>PR URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>