force-app/main/default/objects/GitHub_Details__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <length>255</length>
    <type>Text</type>
</CustomField>