force-app/main/default/objects/GitHub_Details__c/fields/Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Reviewers__c</fullName>
    <label>Reviewers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>