force-app/main/default/objects/GitHub_Details__c/fields/Target_Branch__c.field-meta.xml
<CustomField>
    <fullName>Target_Branch__c</fullName>
    <label>Target Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>